Optimized groupping, scale, move and rotation

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     </div>
     <div class="context">
       <div class="sidebar">
-        hold Shift to pan,
+        hold Alt to pan,
         wheel to zoom
       </div>
       <div class="my-map"></div>
