free drawing feature

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,18 +4,15 @@
     <!-- <link rel="stylesheet" href="index.css"> -->
   </head>
   <body>
-    <div class="toolbar" >
-      Indoorjs 
+    <div class="toolbar">
+      Indoorjs
     </div>
     <div class="context">
       <div class="sidebar">
-        hold Ctl/Cmd to pan,
-        wheel to zoom
+        hold Ctl/Cmd to pan, wheel to zoom
       </div>
       <div class="my-map"></div>
     </div>
   </body>
-  <!-- <script src="../node_modules/fabric/dist/fabric.js"></script>
-  <script src="../dist/indoor.js"></script> -->
   <script src="./main.js"></script>
 </html>
