setView method is added to Map

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,5 +14,5 @@
       <div class="my-map"></div>
     </div>
   </body>
-  <script src="./main.js"></script>
+  <!-- <script src="./main.js"></script> -->
 </html>
